sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:15: error: reassignment to val
     base = base + 1 
          ^